platform/gitops/components/data/valkey/base/service-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: valkey
  labels:
    app.kubernetes.io/name: valkey
    app.kubernetes.io/part-of: valkey
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: valkey
  ports:
    - name: redis
      port: 6379
      targetPort: redis
      protocol: TCP
